crates/oxc_css_parser/tests/error/at-rule/media/unmatched-parens-2.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `<ident>`, but found `(`
  ┌─ unmatched-parens-2.css:1:8
  │
1 │ @media (missing: bracket {
  │        ^
